<resources>
    <string name="app_name">Together</string>
    <string name="app_welcom_flag">让我们一起来改变世界</string>
    <string name="anim_zoom">Zoom</string>
    <string name="alert">提示</string>
     <string name="confirm">确定</string>
    <string name="submenu_query_project">找项目</string>
    <string name="submenu_query_create">找发起人</string>
    <string name="submenu_query_partener">找合伙人</string>
    <string name="submenu_query_visitor">找投资人</string>
    <string name="submenu_query_resource">找创业资源</string>
    <string name="submenu_query_managerproject">管理我的项目</string>
    <string name="actionbar_order_filter">筛选</string>
    <string name="actionbar_list_sort">排序</string>
    <string name="actionbar_list_search">搜索</string>
     <string name="user_info_name">昵称</string>
     <string name="user_info_city">地区</string>
     <string name="user_info_current_status">目前状态</string>
     <string name="user_info_redirect">个人定位</string>
     <string name="user_info_attention">关注领域</string>
     <string name="user_info_phone">手机</string>
     <string name="user_info_email">邮箱</string>
     <string name="user_info_keeptime_notmoney">无薪可维持</string>
     <string name="user_info_output_money">创业出资</string>
     <string name="user_info_wish_opion">期望保障</string>
     <string name="user_info_work">工作经验</string>
     <string name="user_info_education">教育经历</string>
     <string name="user_info_desc">个人简介</string>
     <string name="user_info_project_desc">项目描述</string>
     <string name="user_info_create_info">创业档案</string>
     <string name="user_info_person_info">个人档案</string>
     <string name="project_add_name">请输入项目名称</string>
     <string name="project_add_city">所在城市</string>
     <string name="project_add_select_redirect">选择行业</string>
     <string name="project_add_fininace_status">融资阶段</string>
     <string name="project_add_run_status">运营状态</string>
     <string name="project_add_develop_time">发展阶段</string>
     <string name="project_add_need_pataner">招聘合伙人</string>
     <string name="project_add_city_1">请选择所在城市</string>
     <string name="project_add_select_redirect_1">请选择行业</string>
     <string name="project_add_fininace_status_1">请选择融资阶段</string>
     <string name="project_add_run_status_1">请选择运营状态</string>
     <string name="project_add_develop_time_1">请选择发展阶段</string>
     <string name="project_add_need_pataner_1">添加招聘合伙人</string>
     <string name="project_add_project_desc">请输入项目简介(用一句话概括你的项目，不超过20字)</string>
     <string name="project_add_free_task">需要对以上描述的真实性负责，如果有其他情况，后果自负</string>
     <string name="user_info_create_background">创业背景</string>
     <string name="user_info_not_add_info">未填写</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
  	<string-array name="userinfo_current_status">
        <item>兼职</item>
        <item>考虑全职</item>
        <item>全职</item>
    </string-array>
  	<string-array name="userinfo_attention">
        <item>互联网</item>
        <item>物联网</item>
        <item>媒体</item>
        <item>社交</item>
        <item>点子商务</item>
        <item>游戏</item>
        <item>旅游</item>
        <item>金融</item>
    </string-array>
  	<string-array name="userinfo_redirect">
        <item>开发人员</item>
        <item>运营人员</item>
        <item>销售人员</item>
        <item>设计人员</item>
        <item>广告人员</item>
    </string-array>
  	<string-array name="userinfo_keepmoney">
        <item>不考虑</item>
        <item>一个月</item>
        <item>三个月</item>
        <item>半年</item>
        <item>1年</item>
        <item>若干年 </item>
    </string-array>
  	<string-array name="userinfo_outputmoney">
        <item>1万</item>
        <item>5万</item>
        <item>10万</item>
        <item>30万</item>
        <item>50万</item>
        <item>100万 </item>
    </string-array>
  	<string-array name="partner_work_ways">
        <item>全职</item>
        <item>兼职</item>
        <item>面议 </item>
    </string-array>
  	<string-array name="partner_opion">
        <item>低于1%</item>
        <item>1%-5%</item>
        <item>5%-10% </item>
        <item>10%-15% </item>
        <item>15%-20% </item>
        <item>20%-25% </item>
        <item>25%-30% </item>
        <item>30%-35% </item>
        <item>高于35% </item>
    </string-array>
  	<string-array name="partner_salary">
        <item>市场水平</item>
        <item>基本保障</item>
        <item>无工资 </item>
    </string-array>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="tommorow">明天</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="second">秒</string>
    <string name="ago">前</string>
    <string name="days_ago">%1$d天前</string>
    <string name="time_today">今天%1$d%2$s前</string>
    <string name="visitor_idea">\u0020\u0020\u0020\u0020理念就是你的思想在实战中的不断磨合、来自于自身心性的升华。 它是一种抽象而又高度概括的东西．它不是思想过程和方法，而是全部思想的总纲。是思想的根本原则。也正是我们所信奉的根本。
        理念是不可能用语言完整地去表述和传授，它需要用心去体会，去领悟，去思考</string>
     <string name="visitor_others">人缘，资源，经验，行政，人力等指导</string>
    <string name="hotel_list_num">酒店列表数量</string>
    <string name="flight_list_num">航班列表数量</string>
    <string name="show_hotel_picture">显示酒店列表图片</string>
    <string name="departure_city">默认起飞城市</string>
    <string name="field_departure_city">默认起飞城市：</string>
    <string name="class_like">舱位偏好</string>
    <string name="setting_3g">2G/3G/4G下无图模式</string>
    <string name="setting_sina">新浪微博</string>
    <string name="setting_weixin">微信</string>
    <string name="setting_update">版本更新</string>
    <string name="setting_about">关于艺龙</string>
    <string name="setting_weixin_auth">微信授权</string>
    <string name="setting_help">使用帮助</string>
    <string name="share_setting_about">分享设置</string>
    <string name="share_setting_bound">绑定</string>
    <string name="setting_understand_elong">了解艺龙</string>
    <string name="setting_service_tel">客服电话</string>
    <string name="setting_choose_hotel">订酒店 用艺龙</string>
    <string name="setting_service_tel_num">400-666-1166</string>
    <string name="hotel_order_fillin_primeroomtip">恭喜，您找到的是该房型最优惠的价格。别错过！</string>
    <string name="hotel_order_fillin_fivetoone_roomtip">登录预定还可参与\"会员奖励\"活动哦~</string>
    <string name="railway_search_list_title">火车列表</string>
    <string name="railway_search">\u0020\u0020列车查询</string>
    <string name="train_name_search">车次查询</string>
    <string name="oneway_search">站站查询</string>
    <string name="station_search">车站查询</string>
    <string name="field_leave_station">出发城市</string>
    <string name="leave_station">出发站</string>
    <string name="field_arrive_station">到达城市</string>
    <string name="arrive_station">到达站</string>
    <string name="field_train_name">车\u0020\u0020\u0020\u0020\u0020\u0020\u0020次</string>
    <string name="field_train_name2">列车车次：</string>
    <string name="train_name">车次</string>
    <string name="field_railway_station_name">车站名称</string>
    <string name="railway_station_name">车站名称</string>
    <string name="field_leave_time_sort">时间</string>
    <string name="field_consum_time_sort">历时</string>
    <string name="field_price_sort">价格</string>
    <string name="leave_time">出发</string>
    <string name="field_arrive_time">到达时间</string>
    <string name="arrive_time">到达</string>
    <string name="hotel_hold_time">房间保留至</string>
    <string name="bed_type_require">大双床要求</string>
    <string name="arrive_time2">房间保留时间</string>
    <string name="keep_time">保留时间</string>
    <string name="costtime">历时</string>
    <string name="train_type">车次类型</string>
    <string name="train_list">\u0020\u0020列车列表</string>
    <string name="list_map">\u0020\u0020地\u0020\u0020图</string>
    <string name="list_map1">地图</string>
    <string name="filter">筛\u0020\u0020选</string>
    <string name="filter1">筛选</string>
    <string name="train_filter">列车筛选</string>
    <string name="train_sort">列车排序</string>
    <string name="train_select">车型选择</string>
    <string name="station_select">车站类型：</string>
    <string name="trainsearch_select">车次选择：</string>
    <string name="leavetime_select">出发时间选择</string>
    <string name="arrivetime_select">到达时间选择</string>
    <string name="train_minprice">￥%1$s起</string>
    <string name="train_costtime">历时%1$s时%2$s分</string>
    <string name="train_distance">里程%1$s公里</string>
    <string name="train_arrivetime">到站%1$s(%2$s)</string>
    <string name="train_leavetime">发车%1$s(%2$s)</string>
    <string name="train_leave_time">发车时间：</string>
    <string name="train_leave_time_not">发车时间</string>
    <string name="train_arrive_time">到达时间：</string>
    <string name="train_arrive_time_not">到达时间</string>
    <string name="train_info">列车详情</string>
    <string name="train_fare">参考票价：</string>
    <string name="train_hardseat">硬座</string>
    <string name="train_softseat">软座</string>
    <string name="train_hardsleep">硬卧</string>
    <string name="train_softsleep">软卧</string>
    <string name="train_seata">一等座</string>
    <string name="train_seatb">二等座</string>
    <string name="train_seatsuper">特等座</string>
    <string name="train_gjrw">高级软卧</string>
    <string name="train_emptyprice">--</string>
    <string name="train_station">车站</string>
    <string name="train_stoptime">停留</string>
    <string name="train_stoptime_title">里程</string>
    <string name="more_railway">更多车次</string>
    <string name="train_name_info">请输入车次如：G1</string>
    <string name="train_station_info">请输入车站如：北京西</string>
    <string name="flightsnews_airport_info">请输入机场如：北京首都</string>
    <string name="taxi_input_airport_info">城市名或机场名</string>
    <string name="card_issuer">发卡行</string>
    <string name="field_card_issuer">发\u0020\u0020卡\u0020\u0020行：</string>
    <string name="identifier">验证码</string>
    <string name="field_identifier">验\u0020\u0020证\u0020\u0020码：</string>
    <string name="recognise_code_note">卡背面验证码,没有则不填</string>
    <string name="paper_type">证件类型</string>
    <string name="field_paper_type">证件类型：</string>
    <string name="field_passenger_type">乘客类型：</string>
    <string name="select_paper_type">选择证件类型</string>
    <string name="paper_num">证件号码</string>
    <string name="field_paper_num">证件号码：</string>
    <string name="select_paper_num">选择证件号码</string>
    <string name="question_and_advice">问题&amp;建议：</string>
    <string name="all">全部</string>
    <string name="use_fakedata">使用本地数据(仅用于调试)</string>
    <string name="feedback_content">意见内容</string>
    <string name="feedback_submitlimit_warning">2分钟之内不能重复提交</string>
    <string name="submit_succeed">提交成功</string>
    <string name="submit_failed">提交失败</string>
    <string name="app_update">版本更新</string>
    <string name="app_update_prompt">发现新版本，现在更新？</string>
    <string name="app_update_whatsnew_test">*新增团购功能，可以查询团购订单。\n\n*修正机票订单重复提交问题。\n\n*还不赶快更新！？</string>
    <string name="app_update_newestversion">当前版本已经是最新版本</string>
    <string name="shakesearch_locating_warning">正在校准定位，请稍后尝试</string>
    <string name="hotel_search_locating">正在定位您的位置...</string>
    <string name="shakesearch_locatefailed_warning">定位失败，请确认已打开手机定位功能</string>
    <string name="elong_site">艺龙旅行网</string>
    <string name="hotel_intro_characteristic">特色介绍</string>
    <string name="hotel_intro_facility">设施服务</string>
    <string name="hotel_intro_traffic">交通状况</string>
    <string name="service_no">客服电话</string>
    <string name="network_unavailable">网络不可用</string>
    <string name="network_unavailable_prompt">当前无可用网络</string>
    <string name="network_slow">浏览模式设定</string>
    <string name="network_slow_prompt">是否隐藏酒店列表图片以节省流量?</string>
    <string name="network_setting">设置</string>
    <string name="server_error">服务器错误</string>
    <string name="check_appupdate_onlaunch">启动时检查版本更新</string>
    <string name="check_appupdate">检查版本更新</string>
</resources>