<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:imagecontrol="http://schemas.android.com/apk/res-auto" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/white">
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">
    
   <RelativeLayout 
       android:layout_width="fill_parent"
       android:layout_height="wrap_content">
       <ImageView 
           android:id="@+id/main_menu_img_id"
           style="@style/main_menu_image"
           android:src="@drawable/main_menu_set"
           android:layout_alignParentLeft="true"
           android:layout_alignParentTop="true"/>
       
	    <!-- 圆形边框处理 -->    
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_below="@id/main_menu_img_id"
	        android:layout_marginTop="5dp"
	        android:id="@+id/main_submenu_image_photo_ll_id">
	        <com.beijing.together.activity.widget.RoundImageView 
	            android:layout_width="100dp"
	            android:layout_height="100dp"
	            android:src="@drawable/my_name"
	            imagecontrol:border_inside_color="#fff7f2e9"  
				imagecontrol:border_outside_color="#ffd5d1c8"  
				imagecontrol:border_thickness="2dp"
	            android:id="@+id/main_submenu_image_photo_id"/>
	   </LinearLayout>
	        
	   <TextView 
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:id="@+id/main_submenu_user_name_id"
	       android:gravity="center"
	       android:textSize="24sp"
	       android:layout_below="@id/main_submenu_image_photo_ll_id"
	       android:layout_centerHorizontal="true"
	       android:textColor="@color/black"
	       android:textStyle="bold"
	       android:text="王二胖"
	       android:layout_margin="10dp"/>
 </RelativeLayout>   
    
  <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingLeft="10dp"
      android:id="@+id/main_menu_item_bg_ll_id"> 
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:clickable="true"
        android:id="@+id/sub_menu_project_id">
        <ImageView 
            style="@style/main_menu_image"
            android:src="@drawable/main_menu_project_img"
            android:layout_gravity="center_vertical"/>
        
         <TextView 
	            android:text="@string/submenu_query_project"
	            android:layout_marginLeft="30dp"
	            style="@style/main_menu_text"
	            android:textColor="@color/main_menu_text_color"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/list_divider"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:clickable="true"
        android:id="@+id/sub_menu_create_id">
        <ImageView 
            style="@style/main_menu_image"
            android:src="@drawable/main_menu_founder_img"
            android:layout_gravity="center_vertical"/>
        <TextView 
            android:text="@string/submenu_query_create"
            android:layout_marginLeft="30dp"
            style="@style/main_menu_text"
            android:textColor="@color/main_menu_text_color"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/list_divider"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"/>
    
     <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:clickable="true"
        android:id="@+id/sub_menu_partner_id">
        <ImageView 
            style="@style/main_menu_image"
            android:src="@drawable/main_menu_partner_img"
            android:layout_gravity="center_vertical"/>
        <TextView 
            android:text="@string/submenu_query_partener"
            android:layout_marginLeft="30dp"
            style="@style/main_menu_text"
            android:textColor="@color/main_menu_text_color"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/list_divider"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"/>
    
     <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:clickable="true"
        android:id="@+id/sub_menu_visitor_id">
        <ImageView 
          	style="@style/main_menu_image"
            android:src="@drawable/main_menu_visitor_img"
            android:layout_gravity="center_vertical"/>
        <TextView 
            android:text="@string/submenu_query_visitor"
            android:layout_marginLeft="30dp"
            style="@style/main_menu_text"
            android:textColor="@color/main_menu_text_color"/>
    </LinearLayout>
    
     <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/list_divider"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:clickable="true"
        android:id="@+id/sub_menu_resource_id">
        <ImageView 
            style="@style/main_menu_image"
            android:src="@drawable/main_menu_resource_img"
            android:layout_gravity="center_vertical"/>
        <TextView 
            android:text="@string/submenu_query_resource"
            android:layout_marginLeft="30dp"
            style="@style/main_menu_text"
             android:textColor="@color/main_menu_text_color"/>
    </LinearLayout>	
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/list_divider"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:clickable="true"
        android:id="@+id/sub_menu_manage_id">
        <ImageView 
            style="@style/main_menu_image"
            android:src="@drawable/main_menu_managerproject_img"
            android:layout_gravity="center_vertical"/>
        <TextView 
            android:text="@string/submenu_query_managerproject"
            android:layout_marginLeft="30dp"
            style="@style/main_menu_text"
            android:textColor="@color/main_menu_text_color"/>
    </LinearLayout>	
   </LinearLayout>  
 </LinearLayout>
</ScrollView>
